--- a/src/styles/components/home/projects.module.scss
+++ b/src/styles/components/home/projects.module.scss
@@ -55,3 +55,14 @@
     height: 300px;
     margin-bottom: 150px;
 }
+
+@media (prefers-reduced-motion: no-preference) {
+    .draw-anim {
+        animation: draw 1s;
+        animation-fill-mode: forwards;
+    }
+    
+    @keyframes draw {
+        100% { stroke-dashoffset: 0; }    
+    }
+}
