--- a/src/styles/components/common/footer.module.scss
+++ b/src/styles/components/common/footer.module.scss
@@ -3,6 +3,9 @@
 
 .footer {
     background-color: $color-primary;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
 }
 
 .footer-container {
@@ -10,11 +13,11 @@
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .footer-copyright {
-    position: absolute;
-    right: 100px;
+    margin-right: 100px;
     font-size: 18px;
     @media (max-width: 800px) {
         visibility: hidden;
@@ -22,10 +25,9 @@
 }
 
 .footer-nav {
-    position: absolute;
-    left: 100px;
+    margin-left: 100px;
     display: flex;
-    gap: 14px;
+    gap: 18px;
 
     &-item {
         font-size: 18px;
