start cleanup of mobile

--- a/src/styles/components/home/projects.module.scss
+++ b/src/styles/components/home/projects.module.scss
@@ -52,10 +52,12 @@
     display: flex;
     align-items: center;
 
-    position: relative;
-    left: 400px;
+    margin-left: 400px;
     height: 100%;
     width: fit-content;
+    @media (max-width: 600px) {
+        margin: 300px 0px 0px 100px;
+    }
 }
 
 .endLinks {
