--- a/src/styles/pages/projectPage.module.scss
+++ b/src/styles/pages/projectPage.module.scss
@@ -4,10 +4,10 @@
 .title { 
     text-align: center;
     color: $color-primary;
-    margin: 20px 0 20px 0;
+    margin: 30px 0 20px 0;
 }
 
 .text {
-    margin: 0 20px 0 20px;
+    margin: 0 20px 20px 20px;
     font-size: 24px;
 }
